[gd_scene load_steps=3 format=3 uid="uid://klhftk825ltp"]

[ext_resource type="Script" uid="uid://do121pqc27568" path="res://rhythm_game.gd" id="1_cov3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76igm"]

[node name="RhythmGame" type="Node2D"]
script = ExtResource("1_cov3q")

[node name="GameArea" type="Node2D" parent="."]

[node name="ColumnDividers" type="Node2D" parent="GameArea"]

[node name="HitZone" type="Area2D" parent="GameArea"]

[node name="HitZoneCollision" type="CollisionShape2D" parent="GameArea/HitZone"]
visible = false
shape = SubResource("RectangleShape2D_76igm")

[node name="HitZoneVisual" type="ColorRect" parent="GameArea/HitZone"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Notes" type="Node2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
